# reachy_mini_robot

./: .gitignore
docs/: PRD.md  PROJECT_STATUS.md  README.md  epics.md
docs/reachy-mini-ranger/: TASK_BOARD.md  (+7 more)
src/reachy_mini_apps/reachy_mini_ranger/: .gitignore  README.md  camera_preview.py  camera_web_preview.py  index.html  pyproject.toml  test_hardware_validation.py
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/: camera_worker.py  main.py  main.py.bak
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/brain/: README.md  __init__.py  graph.py  main.py
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/brain/models/: __init__.py  state.py
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/brain/nodes/: __init__.py
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/brain/nodes/cognition/: __init__.py
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/brain/nodes/execution/: __init__.py
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/brain/nodes/memory/: __init__.py
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/brain/nodes/perception/: __init__.py  face_tracker.py  vision_node.py
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/brain/nodes/skills/: __init__.py
src/reachy_mini_apps/reachy_mini_ranger/reachy_mini_ranger/brain/utils/: __init__.py  kinematics.py
src/reachy_mini_apps/reachy_mini_ranger/tests/: __init__.py  test_brain_state.py  test_execution_node.py  test_face_tracker.py  test_graph.py  test_kinematics.py  test_performance.py  test_vision_node.py
(+20 files in other folders)
